<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="36dp"
        android:paddingVertical="24dp"
        tools:context=".ui.patient.profile.ProfileFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/ivPicture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar"
                tools:src="@drawable/ic_picture_empty" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvName"
            style="@style/TextView.PoppinsNormal18sp020202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Patient's name"
            app:layout_constraintEnd_toEndOf="@+id/ivPicture"
            app:layout_constraintStart_toStartOf="@+id/ivPicture"
            app:layout_constraintTop_toBottomOf="@+id/ivPicture" />

        <TextView
            android:id="@+id/tvFullname"
            style="@style/TextView.PoppinsNormal14sp020202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient's name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname_txt" />

        <TextView
            android:id="@+id/tvEmailProfile"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="patient@gmail.com"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />


        <Button
            android:id="@+id/logout_btn"
            android:layout_width="137dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="@+id/check_id_btn"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="@+id/check_id_btn"
            app:layout_constraintTop_toBottomOf="@+id/check_id_btn" />

        <Button
            android:id="@+id/check_id_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/check_id"
            app:layout_constraintEnd_toEndOf="@+id/tvEmailProfile"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="@+id/tvEmailProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailProfile" />

        <TextView
            android:id="@+id/fullname_txt"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Full name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout_btn" />

        <TextView
            android:id="@+id/email_txt"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFullname" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/TextView.PoppinsNormal14sp020202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient's Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_txt" />

        <TextView
            android:id="@+id/phone_txt"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Phone Number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <TextView
            android:id="@+id/tvPhonenumber"
            style="@style/TextView.PoppinsNormal14sp020202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient's phone number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_txt" />

        <TextView
            android:id="@+id/date_txt"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Date Birth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhonenumber" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/TextView.PoppinsNormal14sp020202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient's Date Birth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_txt" />

        <TextView
            android:id="@+id/address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:text="Address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.PoppinsNormal14sp020202"
            android:text="Patient's Address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_txt"/>

        <TextView
            android:id="@+id/gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:text="Gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddress"/>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.PoppinsNormal14sp020202"
            android:text="Patient's Gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_txt"/>

        <TextView
            android:id="@+id/bloodtype_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:text="Blood Type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGender"/>

        <TextView
            android:id="@+id/tvBlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.PoppinsNormal14sp020202"
            android:text="Patient's blood type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bloodtype_txt"/>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/red"
            android:text="Edit Profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBlood" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>